CSS: fixed clipping z-index levelling issue with aboutMeBase and topmost bars

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -112,7 +112,7 @@
     grid-auto-rows: max-content;
 }
 .aboutMeCardBase:hover{
-    z-index: 3;
+    z-index: 0;
 }
 .aboutMeCardBase {
     display: grid;
